# lwm2m

./: CMakeLists.txt
debian/: rules
packaging/: wakaama.spec
